--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -17,6 +17,7 @@
     <dimen name="tablet_filter_white_space">32dp</dimen>
     <dimen name="tablet_flight_details_horizontal_padding">24dp</dimen>
     <dimen name="tablet_flight_details_flight_trip_view_text_size">17sp</dimen>
+    <dimen name="tablet_flight_details_statistic_drawable_spacing">8dp</dimen>
 
     <!-- Tablet details -->
     <dimen name="tablet_detail_padding">16dp</dimen>
