--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -125,7 +125,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:drawablePadding">8dp</item>
+        <item name="android:drawablePadding">@dimen/tablet_flight_details_statistic_drawable_spacing</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">#4c4c4c</item>
         <item name="textStyle">light</item>
