--- a/project/res/layout/include_button_bar.xml
+++ b/project/res/layout/include_button_bar.xml
@@ -16,6 +16,7 @@
         android:layout_height="fill_parent"
         android:layout_marginLeft="6dp"
         android:layout_weight="1"
+        android:contentDescription="@string/cd_hotel_calendar_header"
         android:gravity="center_vertical|left"
         android:maxLines="1"
         android:paddingBottom="6dp"
