Add more non-translated content descriptions, put them in xml homes

--- a/project/res/layout/widget_slide_to.xml
+++ b/project/res/layout/widget_slide_to.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/cd_slide_to_checkout_start" />
 
     <ImageView
         android:id="@+id/slider_image_holder"
@@ -60,7 +61,8 @@
             android:id="@+id/destination_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/cd_slide_to_checkout_end" />
     </RelativeLayout>
 
 </merge>
