--- a/project/res/layout/section_credit_card_input.xml
+++ b/project/res/layout/section_credit_card_input.xml
@@ -12,16 +12,19 @@
         <Button
             android:id="@+id/one_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_one_btn"
             android:text="@string/one" />
 
         <Button
             android:id="@+id/two_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_two_btn"
             android:text="@string/two" />
 
         <Button
             android:id="@+id/three_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_three_btn"
             android:text="@string/three" />
     </TableRow>
 
@@ -33,16 +36,19 @@
         <Button
             android:id="@+id/four_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_four_btn"
             android:text="@string/four" />
 
         <Button
             android:id="@+id/five_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_five_btn"
             android:text="@string/five" />
 
         <Button
             android:id="@+id/six_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_six_btn"
             android:text="@string/six" />
     </TableRow>
 
@@ -54,16 +60,19 @@
         <Button
             android:id="@+id/seven_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_seven_btn"
             android:text="@string/seven" />
 
         <Button
             android:id="@+id/eight_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_eight_btn"
             android:text="@string/eight" />
 
         <Button
             android:id="@+id/nine_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_nine_btn"
             android:text="@string/nine" />
     </TableRow>
 
@@ -75,11 +84,13 @@
         <ImageButton
             android:id="@+id/delete_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_delete_btn"
             android:src="@drawable/ic_keypad_delete" />
 
         <Button
             android:id="@+id/zero_button"
             style="@style/CreditCardButton"
+            android:contentDescription="@string/cd_zero_btn"
             android:text="@string/zero" />
 
         <Button
