--- a/project/res/layout/fragment_tablet_flight_add_to_trip.xml
+++ b/project/res/layout/fragment_tablet_flight_add_to_trip.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
 
     <FrameLayout
         android:id="@+id/add_to_trip_row"
-        android:layout_width="300dp"
+        android:layout_width="@dimen/tablet_tripbucket_card_width"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" >
 
         <include
             android:id="@+id/flight_row"
-            layout="@layout/section_flight_leg_tablet_blue_card" />
+            layout="@layout/flight_card_tablet_add_tripbucket" />
     </FrameLayout>
 
     <FrameLayout
