--- a/project/res/layout/fragment_tablet_results_trip.xml
+++ b/project/res/layout/fragment_tablet_results_trip.xml
@@ -21,8 +21,8 @@
     <com.expedia.bookings.widget.BlockEventFrameLayout
         android:id="@+id/trip_bucket_flight_trip"
         android:layout_width="@dimen/tablet_tripbucket_card_width"
-        android:paddingLeft="25dp"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:paddingLeft="25dp" >
 
         <com.expedia.bookings.widget.SwipeOutLayout
             android:id="@+id/trip_bucket_flight_trip_swipeout"
@@ -50,8 +50,9 @@
 
     <com.expedia.bookings.widget.BlockEventFrameLayout
         android:id="@+id/trip_bucket_hotel_trip"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_width="@dimen/tablet_tripbucket_card_width"
+        android:layout_height="match_parent"
+        android:paddingLeft="25dp" >
 
         <com.expedia.bookings.widget.SwipeOutLayout
             android:id="@+id/trip_bucket_hotel_trip_swipeout"
@@ -70,7 +71,7 @@
 
             <ImageView
                 android:id="@id/hotel_swipe_out_indicator_image"
-                android:layout_width="100dp"
+                android:layout_width="33dp"
                 android:layout_height="match_parent"
                 android:background="#66000000"
                 android:src="@drawable/ic_error_blue" />
