--- a/project/res/layout/fragment_tablet_tripbucket_hotel.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_hotel.xml
@@ -9,6 +9,17 @@
 
     <include
         android:id="@+id/trip_bucket_hotel"
-        layout="@layout/section_hotel_summary_tablet" />
+        layout="@layout/hotel_card_tablet_add_tripbucket" />
+
+    <Button
+        android:id="@+id/tripbucket_book_button_hotel"
+        android:layout_width="@dimen/tablet_tripbucket_card_width"
+        android:layout_height="50dp"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:text="@string/trip_bucket_book_hotel"
+        android:textAlignment="center"
+        android:textColor="#006BB2"
+        android:textSize="16sp" />
 
 </LinearLayout>
