Tablet Results lists refactor.
This commit replaces FruitScrollUpListview with FruitList - the primary difference here being that FruitList
is percentage based, and it implements IStateProvider. There were a few issues with the previous implementation,
the worst of which was the inability to position the list when it wasnt being drawn. Now we can set percentage
at any time, and when it draws it should draw in the right position.

We also updated the structure of the ResultsListFragment/ResultsFlightListFragment/ResultsHoelListFragment so that
the base class ResultsListFragment now does more of the work and we have less duplicate code.

This commit isnt totally complete, the FruitList class still needs some custom attributes, and needs to handle overscrolling better
along with fixing some strange flininging bugs. Still, things are mostly working now, and this commit is already way too large.

--- a/project/res/layout/fragment_tablet_results_list.xml
+++ b/project/res/layout/fragment_tablet_results_list.xml
@@ -6,13 +6,13 @@
 
     <!-- The list view -->
 
-    <com.expedia.bookings.widget.FruitScrollUpListView
+    <com.expedia.bookings.widget.FruitList
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
-        android:choiceMode="singleChoice"
         android:cacheColorHint="@color/tablet_white_pane_bg"
+        android:choiceMode="singleChoice"
         android:divider="@color/tablet_white_pane_bg"
         android:dividerHeight="8dp"
         android:listSelector="@android:color/transparent"
@@ -28,7 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:background="@color/tablet_white_pane_bg"
-        android:gravity="center_vertical" >
+        android:gravity="center_vertical"
+        android:visibility="visible" >
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/sticky_number_of_items"
