Add FruitList attrs, and fix FruitList footer size bug

--- a/project/res/layout/fragment_tablet_results_list.xml
+++ b/project/res/layout/fragment_tablet_results_list.xml
@@ -16,7 +16,10 @@
         android:divider="@color/tablet_white_pane_bg"
         android:dividerHeight="8dp"
         android:listSelector="@android:color/transparent"
-        android:scrollbars="none" />
+        android:scrollbars="none"
+        app:footerSpacerColor="@color/tablet_white_pane_bg"
+        app:headerSpacePercentage="0.5"
+        app:headerSpacerColor="@android:color/transparent" />
 
     <!-- The sticky header view -->
 
