--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme" parent="@android:style/Theme.NoTitleBar">
         <item name="android:windowBackground">@color/window_background</item>
@@ -12,7 +12,7 @@
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
     </style>
 
-    <style name="Theme.Tablet" parent="Theme.Expedia">
+    <style name="Theme.Tablet" parent="Theme.Expedia" tools:targetApi="11">
         <item name="actionMenuTextColor">#505966</item>
         <item name="android:actionMenuTextColor">#505966</item>
         <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
@@ -22,6 +22,7 @@
         <item name="android:actionOverflowButtonStyle">@style/Widget.Sherlock.Light.ActionButton.Overflow</item>
         <item name="homeAsUpIndicator">@drawable/abs__ic_ab_back_holo_light</item>
         <item name="android:homeAsUpIndicator">@drawable/abs__ic_ab_back_holo_light</item>
+        <item name="hotelImagePlaceHolderDrawable">@drawable/ic_image_placeholder</item>
 
         <!-- NumberPicker styles -->
         <item name="numberPickerUpButtonStyle">@style/Widget.ImageButton.NumberPickerUpButton</item>
@@ -33,7 +34,7 @@
         <item name="simpleNumberPickerUpButtonStyle">@style/NumberPickerButton.Up</item>
     </style>
 
-    <style name="Theme.Tablet.Launcher" parent="@style/Theme.Sherlock.Light.DarkActionBar">
+    <style name="Theme.Tablet.Launcher" parent="@style/Theme.Sherlock.Light.DarkActionBar" tools:targetApi="11">
         <item name="android:actionBarStyle">@style/TabletLauncherActionBar</item>
         <item name="actionBarStyle">@style/TabletLauncherActionBar</item>
 
@@ -47,7 +48,7 @@
         <item name="simpleNumberPickerUpButtonStyle">@style/NumberPickerButton.Up</item>
     </style>
 
-    <style name="TabletLauncherActionBar" parent="Widget.Sherlock.ActionBar">
+    <style name="TabletLauncherActionBar" parent="Widget.Sherlock.ActionBar" tools:targetApi="11">
         <item name="android:background">@drawable/bg_action_bar</item>
         <item name="background">@drawable/bg_action_bar</item>
         <item name="android:logo">@drawable/ic_action_bar_expedia_logo</item>
@@ -56,7 +57,7 @@
         <item name="displayOptions">showHome|useLogo</item>
     </style>
 
-    <style name="Theme.Tablet.Dark" parent="@style/Theme.Expedia">
+    <style name="Theme.Tablet.Dark" parent="@style/Theme.Expedia" tools:targetApi="11">
         <item name="android:actionMenuTextColor">#505966</item>
         <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
         <item name="android:actionBarStyle">@style/Widget.ActionBar</item>
@@ -77,9 +78,9 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
         <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowActionModeOverlay">true</item>
-        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowActionBar" tools:targetApi="11">false</item>
+        <item name="android:windowActionModeOverlay" tools:targetApi="11">true</item>
+        <item name="android:windowCloseOnTouchOutside" tools:targetApi="11">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:backgroundDimAmount">0.6</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
@@ -132,21 +133,21 @@
         <item name="actionModeBackground">@drawable/bg_action_mode</item>
         <item name="actionModeCloseDrawable">@drawable/btn_navigation_cancel</item>
         <item name="actionModeCloseButtonStyle">@style/ActionModeCloseMode</item>
-        <item name="android:actionBarItemBackground">@drawable/bg_actionbar_button</item>
-        <item name="android:actionBarStyle">@style/Dark.ActionBar</item>
-        <item name="android:actionBarTabBarStyle">@style/ActionBarTabBar</item>
-        <item name="android:actionBarTabStyle">@style/ActionBarTabView</item>
-        <item name="android:actionBarTabTextStyle">@style/ActionBarTabText</item>
-        <item name="android:actionDropDownStyle">@style/Dark.DropDown</item>
-        <item name="android:actionMenuTextColor">@color/actionbar_text</item>
-        <item name="android:actionModeBackground">@drawable/bg_action_mode</item>
-        <item name="android:actionModeCloseDrawable">@drawable/btn_navigation_cancel</item>
-        <item name="android:actionModeCloseButtonStyle">@style/ActionModeCloseMode</item>
+        <item name="android:actionBarItemBackground" tools:targetApi="14">@drawable/bg_actionbar_button</item>
+        <item name="android:actionBarStyle" tools:targetApi="11">@style/Dark.ActionBar</item>
+        <item name="android:actionBarTabBarStyle" tools:targetApi="11">@style/ActionBarTabBar</item>
+        <item name="android:actionBarTabStyle" tools:targetApi="11">@style/ActionBarTabView</item>
+        <item name="android:actionBarTabTextStyle" tools:targetApi="11">@style/ActionBarTabText</item>
+        <item name="android:actionDropDownStyle" tools:targetApi="11">@style/Dark.DropDown</item>
+        <item name="android:actionMenuTextColor" tools:targetApi="11">@color/actionbar_text</item>
+        <item name="android:actionModeBackground" tools:targetApi="11">@drawable/bg_action_mode</item>
+        <item name="android:actionModeCloseDrawable" tools:targetApi="11">@drawable/btn_navigation_cancel</item>
+        <item name="android:actionModeCloseButtonStyle" tools:targetApi="11">@style/ActionModeCloseMode</item>
         <item name="android:buttonStyle">@style/Widget.Button.Phone</item>
         <item name="android:dropDownListViewStyle">@style/Dark.DropDownListView</item>
         <item name="android:editTextStyle">@style/Widget.EditText.Phone</item>
         <item name="android:textViewStyle">@style/Widget.TextView.Phone</item>
-        <item name="android:selectableItemBackground">@drawable/bg_actionbar_button</item>
+        <item name="android:selectableItemBackground" tools:targetApi="11">@drawable/bg_actionbar_button</item>
         <item name="android:spinnerStyle">@style/Widget.Spinner.Phone</item>
         <item name="numberPickerUpButtonStyle">@style/Widget.ImageButton.NumberPickerUpButton</item>
         <item name="numberPickerDownButtonStyle">@style/Widget.ImageButton.NumberPickerDownButton</item>
@@ -155,7 +156,7 @@
         <item name="simpleNumberPickerDownButtonStyle">@style/NumberPickerButton.Down</item>
         <item name="simpleNumberPickerInputTextStyle">@style/NumberPickerText</item>
         <item name="simpleNumberPickerUpButtonStyle">@style/NumberPickerButton.Up</item>
-        <item name="android:logo">@drawable/ic_logo_hotels</item>
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_hotels</item>
         <item name="logo">@drawable/ic_logo_hotels</item>
 
         <!-- Custom attrs for Expedia/VSC switching -->
@@ -213,23 +214,23 @@
     <style name="Theme.Phone.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:windowActionBar">false</item>
+        <item name="android:windowActionBar" tools:targetApi="11">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="Theme.Phone.WebView">
-        <item name="android:logo">?attr/webViewPreferencesActionBarLogo</item>
+        <item name="android:logo" tools:targetApi="11">?attr/webViewPreferencesActionBarLogo</item>
         <item name="logo">?attr/webViewPreferencesActionBarLogo</item>
     </style>
 
     <style name="Theme.Phone.WebView.WithTitle">
-        <item name="android:logo">?attr/webViewPreferencesActionBarLogoWithTitle</item>
+        <item name="android:logo" tools:targetApi="11">?attr/webViewPreferencesActionBarLogoWithTitle</item>
         <item name="logo">?attr/webViewPreferencesActionBarLogoWithTitle</item>
     </style>
 
     <style name="Theme.Phone.Preferences">
         <item name="logo">?attr/webViewPreferencesActionBarLogo</item>
-        <item name="android:logo">?attr/webViewPreferencesActionBarLogo</item>
+        <item name="android:logo" tools:targetApi="11">?attr/webViewPreferencesActionBarLogo</item>
     </style>
 
     <style name="Theme.Phone.Dark" parent="Theme.Phone">
@@ -241,16 +242,16 @@
 
     <style name="LoginTheme" parent="Theme.Phone.Dark">
         <item name="logo">@drawable/ic_ab_expedia_logo</item>
-        <item name="android:logo">@drawable/ic_ab_expedia_logo</item>
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_ab_expedia_logo</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
     <style name="LaunchTheme" parent="@style/Theme.Sherlock">
         <item name="logo">@drawable/ic_ab_expedia_logo</item>
-        <item name="android:logo">@drawable/ic_ab_expedia_logo</item>
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_ab_expedia_logo</item>
         <item name="actionBarStyle">@style/LaunchActionBar</item>
-        <item name="android:actionBarStyle">@style/LaunchActionBar</item>
-        <item name="android:actionBarTabStyle">@style/LaunchActionBarTabStyle</item>
+        <item name="android:actionBarStyle" tools:targetApi="11">@style/LaunchActionBar</item>
+        <item name="android:actionBarTabStyle" tools:targetApi="11">@style/LaunchActionBarTabStyle</item>
 
         <!-- PopupMenu -->
         <item name="dropDownListViewStyle">@style/Widget.Sherlock.Light.ListView.DropDown</item>
@@ -259,12 +260,12 @@
 
     <style name="ItineraryTheme" parent="@style/Theme.Sherlock.Light.DarkActionBar">
         <item name="logo">@drawable/ic_action_bar_expedia_logo_small</item>
-        <item name="android:logo">@drawable/ic_action_bar_expedia_logo_small</item>
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_action_bar_expedia_logo_small</item>
     </style>
 
     <style name="LaunchActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid.Inverse">
         <item name="displayOptions">showHome|useLogo</item>
-        <item name="android:displayOptions">showHome|useLogo</item>
+        <item name="android:displayOptions" tools:targetApi="11">showHome|useLogo</item>
         <item name="background">@drawable/bg_launch_ab</item>
         <item name="android:background">@drawable/bg_launch_ab</item>
     </style>
@@ -290,17 +291,17 @@
         <item name="numberPickerInputTextStyle">@style/Widget.EditText.NumberPickerInputText</item>
         <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
         <item name="logo">@drawable/ic_logo_flights</item>
-        <item name="android:logo">@drawable/ic_logo_flights</item>
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_flights</item>
         <item name="actionBarStyle">@style/FlightActionBar</item>
-        <item name="android:actionBarStyle">@style/FlightActionBar</item>
+        <item name="android:actionBarStyle" tools:targetApi="11">@style/FlightActionBar</item>
         <item name="actionMenuTextColor">@color/action_bar_flight_text_color</item>
-        <item name="android:actionMenuTextColor">@color/action_bar_flight_text_color</item>
+        <item name="android:actionMenuTextColor" tools:targetApi="11">@color/action_bar_flight_text_color</item>
         <item name="actionModeCloseDrawable">@drawable/btn_navigation_cancel</item>
-        <item name="android:actionModeCloseDrawable">@drawable/btn_navigation_cancel</item>
+        <item name="android:actionModeCloseDrawable" tools:targetApi="11">@drawable/btn_navigation_cancel</item>
         <item name="android:editTextStyle">@style/Widget.EditText.Phone</item>
         <item name="android:spinnerStyle">@style/Widget.Spinner.Phone.Flights</item>
         <item name="android:autoCompleteTextViewStyle">@style/Widget.AutoComplete</item>
-		<item name="travelerLabelOnCheckout">@string/Add_Traveler</item>
+        <item name="travelerLabelOnCheckout">@string/Add_Traveler</item>
         <!-- Only do this for ABS - newer versions will use latest holo radio button anyways -->
         <item name="actionBarWidgetTheme">@style/FlightActionBarWidgetTheme</item>
     </style>
@@ -311,7 +312,7 @@
 
     <style name="FlightTheme.OverlayMode">
         <item name="windowActionBarOverlay">true</item>
-        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowActionBarOverlay" tools:targetApi="11">true</item>
     </style>
 
     <style name="FlightTheme.CheckoutForms">
@@ -319,19 +320,19 @@
     </style>
 
     <style name="HotelWebViewTheme" parent="Theme.Phone">
-        <item name="android:actionBarStyle">@style/HotelWebViewActionBar</item>
+        <item name="android:actionBarStyle" tools:targetApi="11">@style/HotelWebViewActionBar</item>
         <item name="actionBarStyle">@style/HotelWebViewActionBar</item>
     </style>
 
     <style name="HotelWebViewActionBar" parent="Widget.Sherlock.ActionBar">
         <item name="android:background">?attr/actionBarBackgroundDrawable</item>
         <item name="background">?attr/actionBarBackgroundDrawable</item>
-        <item name="android:logo">?attr/hotelwebViewActionBarLogo</item>
+        <item name="android:logo" tools:targetApi="11">?attr/hotelwebViewActionBarLogo</item>
         <item name="logo">?attr/hotelwebViewActionBarLogo</item>
         <item name="titleTextStyle">@style/FlightActionBarTextAppearance</item>
-        <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
+        <item name="android:titleTextStyle" tools:targetApi="11">@style/FlightActionBarTextAppearance</item>
         <item name="homeAsUpIndicator">@drawable/ic_action_bar_back_arrow</item>
-        <item name="android:homeAsUpIndicator">@drawable/ic_action_bar_back_arrow</item>
+        <item name="android:homeAsUpIndicator" tools:targetApi="11">@drawable/ic_action_bar_back_arrow</item>
     </style>
 
     <!--
@@ -346,11 +347,11 @@
         <item name="background">@drawable/bg_action_bar_flight_top</item>
         <item name="android:background">@drawable/bg_action_bar_flight_top</item>
         <item name="backgroundSplit">@drawable/bg_action_bar_flight_bottom</item>
-        <item name="android:backgroundSplit">@drawable/bg_action_bar_flight_bottom</item>
+        <item name="android:backgroundSplit" tools:targetApi="14">@drawable/bg_action_bar_flight_bottom</item>
         <item name="titleTextStyle">@style/FlightActionBarTextAppearance</item>
-        <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
+        <item name="android:titleTextStyle" tools:targetApi="11">@style/FlightActionBarTextAppearance</item>
         <item name="homeAsUpIndicator">@drawable/ic_action_bar_back_arrow</item>
-        <item name="android:homeAsUpIndicator">@drawable/ic_action_bar_back_arrow</item>
+        <item name="android:homeAsUpIndicator" tools:targetApi="11">@drawable/ic_action_bar_back_arrow</item>
     </style>
 
     <style name="FlightActionBarTextAppearance" parent="@android:style/TextAppearance.Medium">
@@ -383,9 +384,9 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowActionModeOverlay">true</item>
-        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowActionBar" tools:targetApi="11">false</item>
+        <item name="android:windowActionModeOverlay" tools:targetApi="11">true</item>
+        <item name="android:windowCloseOnTouchOutside" tools:targetApi="11">true</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
     </style>
 
