--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -9,7 +9,7 @@
 	    Don't put anything in here; it just marks the difference between our
 	    terribly-organized v1 styles and our (hopefully) better organized v2 styles
     -->
-    <style name="V2" tools:targetApi="11" />
+    <style name="V2" />
 
     <!-- Values that go into *everything*.  Don't put anything here unless you want it *everywhere* -->
     <style name="V2.Theme" parent="@android:style/Theme.Holo.Light.DarkActionBar" tools:targetApi="14" />
@@ -17,12 +17,12 @@
     <!-- Values that go into every *activity*.  Don't put anything here unless you want it in every *activity* -->
     <style name="V2.Theme.Activity" />
 
-    <style name="V2.Theme.Activity.TabletLaunch">
-        <item name="android:windowActionBarOverlay" tools:targetApi="11">true</item>
-        <item name="android:actionBarStyle" tools:targetApi="11">@style/V2.Widget.ActionBar.TabletLaunch</item>
+    <style name="V2.Theme.Activity.TabletLaunch" tools:targetApi="11">
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletLaunch</item>
     </style>
 
-    <style name="V2.Theme.Activity.TabletResults">
+    <style name="V2.Theme.Activity.TabletResults" tools:targetApi="11">
         <item name="HotelRowThumbPlaceHolderDrawable">@drawable/ic_row_thumb_placeholder</item>
         <item name="hotelListingUserRatingStyle">@style/RatingBar.UserReview.White</item>
         <item name="hotelListingSaleDrawable">@drawable/bg_hotel_cell_sale</item>
@@ -39,6 +39,7 @@
         <item name="android:actionBarStyle" tools:targetApi="11">@style/V2.Widget.ActionBar.TabletResults</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale</item>
+        <item name="hotelImagePlaceHolderDrawable">@drawable/ic_image_placeholder</item>
     </style>
 
     <!-- Action bar styling; directly linked to themes so not moving too far away -->
@@ -47,11 +48,11 @@
 
     <style name="V2.Widget.ActionBar" parent="@android:style/Widget.Holo.ActionBar" tools:targetApi="11" />
 
-    <style name="V2.Widget.ActionBar.TabletLaunch">
+    <style name="V2.Widget.ActionBar.TabletLaunch" tools:targetApi="11">
         <item name="android:background">@drawable/ab_transparent_dark_blue</item>
-        <item name="android:logo" tools:targetApi="11">@drawable/ab_logo_tablet_launch</item>
+        <item name="android:logo">@drawable/ab_logo_tablet_launch</item>
         <item name="android:windowContentOverlay">@drawable/ab_shadow_tablet_launch</item>
-        <item name="android:displayOptions" tools:targetApi="11">showHome|useLogo</item>
+        <item name="android:displayOptions">showHome|useLogo</item>
     </style>
 
     <style name="V2.Widget.ActionBar.TabletResults">
@@ -77,7 +78,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:divider">@drawable/grey_divider</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:showDividers">middle</item>
+        <item name="android:showDividers" tools:targetApi="11">middle</item>
     </style>
 
     <!-- TextView styling -->
