--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -20,8 +20,8 @@
             <FrameLayout
                 android:id="@+id/hotel_header_container"
                 android:layout_width="match_parent"
-                android:background="#000000"
-                android:layout_height="200dp" >
+                android:layout_height="200dp"
+                android:background="#000000" >
 
                 <!-- Hotel image (#1822) -->
 
@@ -29,8 +29,9 @@
                     android:id="@+id/hotel_header_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center"
                     android:scaleType="centerCrop"
-                    android:gravity="center" />
+                    android:src="?attr/hotelImagePlaceHolderDrawable" />
 
                 <!-- Hotel header section (#2058) -->
 
