--- a/project/res/layout/fragment_tablet_results_hotels.xml
+++ b/project/res/layout/fragment_tablet_results_hotels.xml
@@ -6,7 +6,7 @@
 
     <!-- BACKGROUND CONTAINERS -->
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/bg_hotel_map_touch_delegate"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -18,27 +18,27 @@
 
     <!-- FORGROUND CONTAINERS -->s
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/column_two_hotel_filters"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/column_one_hotel_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/column_three_hotel_filtered_count"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/hotel_rooms_and_rates_shade"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/hotel_rooms_and_rates"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
