--- a/project/res/layout/fragment_tablet_results_flights.xml
+++ b/project/res/layout/fragment_tablet_results_flights.xml
@@ -6,7 +6,7 @@
 
     <!-- BG FLIGHT MAP -->
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/bg_flight_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -14,12 +14,12 @@
     <!-- FLIGHT TWO -->
     <!-- This ends up being below flight one, due to how the transition animations work -->
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/flight_two_details"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/flight_two_filters"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
@@ -29,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent" >
 
-        <com.expedia.bookings.widget.BlockEventFrameLayout
+        <com.expedia.bookings.widget.FrameLayoutTouchController
             android:id="@+id/flight_two_header_with_flight_one_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
@@ -37,9 +37,9 @@
             <include
                 android:id="@+id/flight_one_row"
                 layout="@layout/section_flight_leg_tablet_blue_card_checked" />
-        </com.expedia.bookings.widget.BlockEventFrameLayout>
+        </com.expedia.bookings.widget.FrameLayoutTouchController>
 
-        <com.expedia.bookings.widget.BlockEventFrameLayout
+        <com.expedia.bookings.widget.FrameLayoutTouchController
             android:id="@+id/flight_two_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -48,24 +48,24 @@
 
     <!-- FLIGHT ONE -->
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/flight_one_details"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/flight_one_filters"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/flight_one_list"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
 
     <!-- ADD TO TRIP -->
 
-    <com.expedia.bookings.widget.BlockEventFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/flights_add_to_trip"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
