--- a/project/res/layout/fragment_tablet_results_hotels.xml
+++ b/project/res/layout/fragment_tablet_results_hotels.xml
@@ -11,12 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.expedia.bookings.widget.TouchThroughFrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/bg_hotel_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!-- FORGROUND CONTAINERS -->s
+    <!-- FORGROUND CONTAINERS -->
+s
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/column_two_hotel_filters"
