1883: Flight map checkpoint
I'm going to make some more drastic changes to the rendering so I
figured I should get something in now. Also waiting on some more
appropriately sized assets for the plane.

--- a/project/res/layout/fragment_results_flight_map.xml
+++ b/project/res/layout/fragment_results_flight_map.xml
@@ -8,6 +8,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.expedia.bookings.widget.FlightLineView
+        android:id="@+id/flight_line_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ImageView
         android:id="@+id/departure_image"
         android:layout_width="wrap_content"
