--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -262,5 +262,6 @@
     <!-- Tablet trip bucket dimens -->
     <dimen name="tablet_tripbucket_card_height">148dp</dimen>
     <dimen name="tablet_tripbucket_card_width">352dp</dimen>
+    <dimen name="tripbucket_bookbutton_height">50dp</dimen>
 
 </resources>
