--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -1020,4 +1020,14 @@
         <item name="android:textSize">16dp</item>
     </style>
 
+    <style name="TripBucketBookButton">
+        <item name="android:layout_width">@dimen/tablet_tripbucket_card_width</item>
+        <item name="android:layout_height">@dimen/tripbucket_bookbutton_height</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#006BB2</item>
+    </style>
+
 </resources>
